--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -51,6 +51,6 @@ jobs:
 
     - name: Deploy to Kubernetes
       run: |
-        kubectl apply -f k8s/
+        kubectl apply -f k8s/ --validate=false
 env:
   KUBECONFIG: ${{ secrets.KUBECONFIG }}
