--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -34,6 +34,8 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
+    env:
+      KUBECONFIG: kubeconfig
 
     steps:
     - name: Checkout Code
@@ -44,9 +46,18 @@ jobs:
       with:
         version: 'latest'
 
+    - name: Set up Kubeconfig
+      run: |
+        echo "${{ secrets.KUBECONFIG }}" > kubeconfig
+        export KUBECONFIG=kubeconfig
+
+    - name: Output Current Kubernetes Context
+      run: |
+        kubectl config current-context
+
     - name: Verify Kubernetes Cluster Connectivity
       run: |
-        kubectl get nodes
+        kubectl get nodes --validate=false
 
     - name: Apply Secrets
       run: |
@@ -58,17 +69,8 @@ jobs:
         kubectl apply -f k8s/help-service-configmap.yaml --validate=false
         kubectl apply -f k8s/user-service-configmap.yaml --validate=false
 
-    - name: Set up Kubeconfig
-      run: |
-        echo "${{ secrets.KUBECONFIG }}" > kubeconfig
-        export KUBECONFIG=kubeconfig
-
-    - name: Output Current Kubernetes Context
-      run: |
-        kubectl config current-context
-
     - name: Deploy to Kubernetes
       run: |
+        export KUBECONFIG=kubeconfig
         kubectl apply -f k8s/ --validate=false
-env:
-  KUBECONFIG: ${{ secrets.KUBECONFIG }}
+# Removed global env as it's now set at the job level
