--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -12,13 +12,28 @@ server {
         try_files $uri =404; # Try to find the file, if not found, return 404
     }
 
+    # Proxy API calls for the User Service
+    # Requests to /api/users/anything will be sent to http://user-service:3000/api/users/anything
+    location /api/users/ {
+        proxy_pass http://user-service:3000/api/users/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Proxy API calls for the Help Service
+    # Requests to /api/help/anything will be sent to http://help-service:3002/api/help/anything
+    location /api/help/ {
+        proxy_pass http://help-service:3002/api/help/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     # For all other paths, serve index.html (for React Router)
     location / {
         try_files $uri $uri/ /index.html;
     }
-
-    # Optional: Serve backend calls via NGINX if needed (not strictly necessary with K8s Ingress)
-    # location /api {
-    #     proxy_pass http://user-service.default.svc.cluster.local:3000;
-    # }
 }
