--- a/k8s/frontend/frontend-help-api-ingress.yaml
+++ b/k8s/frontend/frontend-help-api-ingress.yaml
@@ -1,10 +1,9 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: frontend-users-api-ingress
+  name: frontend-help-api-ingress
   annotations:
     nginx.ingress.kubernetes.io/use-regex: 'true'
-    # This is the key part - properly rewrite the request path
     nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
   ingressClassName: nginx
@@ -12,10 +11,10 @@ spec:
     - host: frontend.local
       http:
         paths:
-          - path: /api/users/(.*)
+          - path: /api/help/(.*)
             pathType: ImplementationSpecific
             backend:
               service:
-                name: user-service
+                name: help-service
                 port:
-                  number: 3000
+                  number: 3002
